# Caw

./: .gitignore  BACKLOG.md  CLAUDE.md  ELASTICSEARCH_SETUP.md  PROJECT_BACKLOG.md  README.md  UI_CONSISTENCY_STANDARD.md  docker-compose.elasticsearch.yml  dump.rdb  ecosystem.config.cjs  how --stat ff66561  install.sh  package-lock.json  package.json  rebase-clean.sh  truffle-config.js
cli/: asci.txt  package-lock.json  package.json
client/: .env.example  IMAGE_UPLOAD_SYSTEM.md  README.md  SECURITY_NOTICE_E2EE.md  XMTP_TEST_RESULTS.md  check-hashtags.js  check-pending.js  check-tx-details.js  clean-stuck-tx.js  cleanup-stuck.js  config.template.json  debug-txqueue.js  docker-compose.xmtp.yml  dotenv-preload.js  file-polyfill.js  fix-negative-likes.js  init_baseline.sql  migrate-status.sql  migrate-to-encrypted.sql  package-lock.json  package.json  test-xmtp.js  tsconfig.json  watch-logs.sh  xmtp-dev-12b7fa475578db30821414315c9aecc68028cb996d72e32332381c73dbece3da.db3  xmtp-dev-12b7fa475578db30821414315c9aecc68028cb996d72e32332381c73dbece3da.db3.sqlcipher_salt  xmtp-dev-3c11255e2a2057710c7d400c8fba42f068d3adbe0a0395eeef7768809dfeeddf.db3  xmtp-dev-3c11255e2a2057710c7d400c8fba42f068d3adbe0a0395eeef7768809dfeeddf.db3.sqlcipher_salt  xmtp-dev-7a74fb5dfe0dab7cec39a99033a399927b956cdb169af1c323c3fc0afee16008.db3  xmtp-dev-7a74fb5dfe0dab7cec39a99033a399927b956cdb169af1c323c3fc0afee16008.db3-shm  xmtp-dev-7a74fb5dfe0dab7cec39a99033a399927b956cdb169af1c323c3fc0afee16008.db3-wal  xmtp-dev-7a74fb5dfe0dab7cec39a99033a399927b956cdb169af1c323c3fc0afee16008.db3.sqlcipher_salt  xmtp-dev-a4cefb435d2374f5c3835255e45eb5af5f9d6df81e79b9c783bcb294e451550f.db3  xmtp-dev-a4cefb435d2374f5c3835255e45eb5af5f9d6df81e79b9c783bcb294e451550f.db3-shm  xmtp-dev-a4cefb435d2374f5c3835255e45eb5af5f9d6df81e79b9c783bcb294e451550f.db3-wal  xmtp-dev-a4cefb435d2374f5c3835255e45eb5af5f9d6df81e79b9c783bcb294e451550f.db3.sqlcipher_salt  xmtp-migration.sql
contracts/: CawActions.sol  CawClientManager.sol  CawIndexing.sol  CawName.sol  CawNameL2.sol  CawNameMinter.sol  MockLayerZeroEndpoint.sol
docs/: ACTION_COST_CAP.md  AGENT_HANDOFF_PROTOCOL.md  ARCHITECTURE.md  AUDIT_2026_05_08.md  AUDIT_TRAIL.md  BMAD_DEVELOPMENT_PLAN.md  CARD_PROFILE_AND_KYC_PLAN.md  DATA_FLOW.md  DEPENDENCY_AUDIT_2026-05-13.md  DIRECT_MESSAGING.md  FOR_DEVELOPERS.md  GETTING_STARTED.md  KEY_PROTECTION_COMPARISON.md  MARKETPLACE.md  MIGRATIONS.md  MIGRATION_AUDIT_2026-05-13.md  MULTI_CHAIN_STORAGE.md  OTHER_ACTION_TYPES.md  OVERNIGHT_SUMMARY_2026-05-13.md  RAINBOW_WALLET_REPRO.md  README.md  REPLICATION_AND_SLASHING.md  SCALING.md  SECURITY_AUDIT_2026-05-13.md  SECURITY_AUDIT_OPTIONS.md  SESSION_KEYS.md  SIGNER_SERVICE_DESIGN.md  SOLANA_OPTION.md  V1_TO_V2_CHANGES.md  V2_CLEANUP.md  V2_DB_SETUP.md  VALIDATOR_MESH_NETWORK.md  VERIFIER_DEPLOY.md  WHITEPAPER.md  WITHDRAW_LOCK_SPEC.md  XMTP_INTEGRATION.md  ZK_SIG_PATH.md
migrations/: 1_initial_migration.js
native/: README.md
scripts/: diag-low-level.ts  helpers.js  l2_helpers.js
smltxt/: .gitignore  .npmignore  .xo-config  (+4 more)
solidity/zk/sig-recovery/: Cargo.toml  README.md
solidity/zk/sig-recovery/lib/: Cargo.toml
solidity/zk/sig-recovery/lib/src/: lib.rs
solidity/zk/sig-recovery/program/: Cargo.toml
solidity/zk/sig-recovery/program/src/: main.rs
solidity/zk/sig-recovery/script/: Cargo.toml
(+980 files in other folders)
