[package]
version = "0.1.0"
name = "sig-recovery-script"
edition = "2021"
default-run = "sig-recovery"

[[bin]]
name = "sig-recovery"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "digest-fixtures"
path = "src/bin/digest-fixtures.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking", "native-gnark"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
sig-recovery-lib = { path = "../lib", features = ["std"] }
dotenv = "0.15.0"
k256 = { version = "0.13", features = ["ecdsa"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

[build-dependencies]
sp1-build = { version = "6.0.1" }
